--- a/.github/workflows/worklow.yml
+++ b/.github/workflows/worklow.yml
@@ -41,8 +41,8 @@ jobs:
               git pull
               export NVM_DIR=~/.nvm
               source ~/.nvm/nvm.sh
-              npm install
-              npm build
+              npm run install
+              npm run build
               cp builds/* build/ -r
               
       
